--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -46,13 +46,13 @@
 
 
 
-Degmada Dharkenley waxay ka mid tahay degmooyinka magaalada Muqdisho waxay xigtaa dhanka koonfur galbeed.
+Degmada Dharkeynley waxay ka mid tahay degmooyinka magaalada [[Muqdisho]] waxay xigtaa dhanka koonfur galbeed.
 
-Dharkenley iyo wadajir markii hore waxay isla ahaayen hal degmo mar dambe ayaa labo degmo laga kala dhigay. halka xuduudeeda u ah labada degmo ayaa lagu tilmaamaa in ay tahay wadada xaaji maxamed ee Suuq yare.
+[[Dharkeynley]] iyo [[wadajir]] markii hore waxay isla ahaayen hal degmo mar dambe ayaa labo degmo laga kala dhigay. halka xuduudeeda u ah labada degmo ayaa lagu tilmaamaa in ay tahay wadada xaaji maxamed ee Suuq yare.
 
-Degmada Dharkenley waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka, ku soo qaxay dad fara badan oo degnaa Magaalada inteeda kale.
+Degmada Dharkeynley waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka, ku soo qaxay dad fara badan oo degnaa Magaalada inteeda kale.
 
-Degmada Waxay soo martay marxalado kala duwan waxaana lagu tilmaamaa meelaha istaraatiijiga ee ka yaala Xamar.
+Degmada Waxay soo martay marxalado kala duwan waxaana lagu tilmaamaa meelaha istaraatiijiga ee ka yaala [[Xamar]].
 
 Waagii burburka waxaa maaamuli jiray hogaamiyo kooxeedyo kala duwan sida: Muuse Suudi, Xuseen Caydiid waxaana ka dhici jiray mar mar dagaalo aan sidaa u cusleyn.
 
@@ -68,7 +68,7 @@ Masaajido badan ayaa ku yaala degmada sida misaajidka dabaqeyn, uunlaayo, Masjid
 
 > Suuqyada Caanka ee ku yaala dharkeenley
 
-Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
+Suuq boocle, Suuq yare iyo Suuq liif
 
 
 > Meelaha caanka ee dharkeenley
@@ -93,23 +93,23 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 
 > Goobaha Caalamiga ee ku yaala Dharkenley 
 
-• Jaamacadda Ummadda Soomaaliyeed (Gaheyr)
+• [[Jaamacadda Ummadda Soomaaliyeed]] (Gaheyr)
 
-• Safaarada Mareekanka
+• [[Safaarada Mareekanka]]
 
-• Warshada daawada
+• [[Warshada daawada]]
  
-• Warshada hargaha 
+• [[Warshada hargaha]] 
 
 > Laamiyada Waaweyn ee Mara Dharkenley 
 
 • Jidka Jaale siyaad 
 
-• Wadada Dharkenley (dhanka xoosh) 
+• Wadada Dharkeynley (dhanka xoosh) 
 
 • Wadada Afgooye (Dhanka JUS ama Gaheyr) 
  
-> Iskuulada Dawlada ee ku yaala Degmada 
+> Dugsiyada Dawlada ee ku yaala Degmada 
 
 • Dhame yaasiin Cartan 
 
@@ -117,7 +117,7 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 
 • Baarbe
 
-> Iskuulada gaarka ah eeku yaala degmada 
+> Dugsiyada gaarka ah ee ku yaala degmada 
 
 • Al-Fariid
 
@@ -135,9 +135,9 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 
 • Halgan
 
-> Tartan Aqooneedka degmada dharkenley
+> Tartan Aqooneedka degmada dharkeynley
 
-Degmada waxay ku guuleysatay tartan aqooneed kii ramadaanka ee 2013 oo ay ku tartamayeen in ka badan 28 degmo oo ka kala yimid gobalada dalka oo dhan. sidoo kalana tartankii ramadaan ee 2020 waxay gashay kaalinta labaad.
+Degmada waxay ku guuleysatay tartan aqooneed kii ramadaanka ee 2013 oo ay ku tartamayeen in ka badan 28 [[degmo]] oo ka kala yimid gobalada dalka oo dhan. sidoo kalana tartankii ramadaan ee 2020 waxay gashay kaalinta labaad.
 
 
 > Ciyaaraha iyo Kooxaha ka jira dharkeenleey degmada waxaa ka jira kooxo badan oo kubada cagta sida kooxaha: 
@@ -174,4 +174,4 @@ Degmada waxay ku guuleysatay tartan aqooneed kii ramadaanka ee 2013 oo ay ku tar
 
 • R.R.P.B.O
 
-Degmada Dharkenley waxay ku fiicanyihiin ciyaaraha isboortiska gaar ahaan kubada Cagta waxaana ay ahaayeen guuleystayaashii 2011 iyo guuleytayaashii sanadkii ugu danbeeyay ee 2020 ee ku guuleystay tartanka degmooyinka G/Banaadir ayagoona ka qaaday degmada Waaberi.
+Degmada [[Dharkenley]] waxay ku fiicanyihiin ciyaaraha isboortiska gaar ahaan [[kubada Cagta]] waxaana ay ahaayeen guuleystayaashii 2011 iyo guuleytayaashii sanadkii ugu danbeeyay ee 2020 ee ku guuleystay tartanka degmooyinka [[G/Banaadir]] ayagoona ka qaaday degmada [[Waaberi]].
