--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -119,21 +119,23 @@ Suuq boocle, Suuq yare iyo Suuq liif
 
 > Dugsiyada gaarka ah ee ku yaala degmada 
 
+• Al-Anwaar 
+
 • Al-Fariid
 
-• Abuubakar 
+• Al-Safa 
+
+• Al-Risala 
+
+• Abuubakar Sadiiq (Dabaqeyn)
 
 • Iqra 
 
 • Khaddiijo
 
-• Al-Anwaar
-
-• Assafa 
-
-• Al-Risala 
-
 • Halgan
+ 
+iyo Dugsiyo kale oo fara badan
 
 > Tartan Aqooneedka degmada dharkeynley
 
