*Empty MediaWiki Message*

--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -1,3 +1,6 @@
+{{Caddayn u baahan}}
+{{wargelin|Qoraalka bogan waa mid la [[tirtir]]i rabo, hadii cadeymo loo heli waayo.}}
+{{wargelin|Qoraalka bogan waa mid uqoran si qaab daran ama ka samaysan luuqad qalaad. Fadlan naga caawi turjumaada.}}
 {{Infobox Degmo
 | name                = Dharkenley
 | official_name       =  طركينلي
