*Empty MediaWiki Message*

--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -1,3 +1,4 @@
+{{wargelin|Qoraalka bogan waa mid uqoran si qaab daran. Fadlan naga caawi turjumaada.}}
 {{Infobox person
 | name        = Cali Maxamuud Samantar (Cali Gurey) </br> Ali Mohamud Samanter (Ali Gurey) <br> علي محمود السمنتر
 | image       = [[File:Ali gurey.jpg|thumb|Ali gurey]]
