*Empty MediaWiki Message*

--- a/Wikipedia:Safaarad%2FHordhac.mw
+++ b/Wikipedia:Safaarad%2FHordhac.mw
@@ -11,7 +11,7 @@
 * If you are looking for old threads, please check the archives: [[Wikipedia:Safaarad/Kayd 1|1]] [[Wikipedia:Safaarad/Kayd 2|2]] [[Wikipedia:Safaarad/Kayd 3|3]] [[Wikipedia:Safaarad/Kayd 4|4]] [[Wikipedia:Safaarad/Kayd 5|5]] [[Wikipedia:Safaarad/Kayd 6|6]] [[Wikipedia:Safaarad/Kayd 7|7]] [[Wikipedia:Safaarad/Kayd 8|8]] [[Wikipedia:Safaarad/Kayd 9|9]] [[Wikipedia:Safaarad/Kayd 10|10]]
 |title2='''Soomaaliga'''
 |content2=
-'''Kusoo dhooqo''' Safaaradda wikipedia ee Soomaaliga! hadii aad hayso wax ogeeysiis ah ama su'aal  ku saabsan arrimo caalami ah ama wikipedia soomaaliga waad ku soo ban dhigi kartaa halkaan ama bogga wadahadalka ee maqaalkaan.
+'''Kusoo dhawoow''' Safaaradda wikipedia ee Soomaaliga! hadii aad hayso wax ogeeysiis ah ama su'aal  ku saabsan arrimo caalami ah ama wikipedia Soomaaliga waad ku soo ban dhigi kartaa halkaan ama bogga wadahadalka ee maqaalkaan.
 <center>
 {{Clickable button 2
 |url=//so.wikipedia.org/w/wiki.phtml?title=Wikipedia:Safaarad&action=edit&section=new
