--- a/DDS.mw
+++ b/DDS.mw
@@ -5,3 +5,6 @@ Deegaanku wuxuu xad la leeyahay: dhinaca konfureed waxa ka xiga Kenya; dhinaca b
 Tirada dadka ku nool deegaanka waxa lagu qiyaasaa 18.4 million (Tiro-koobkii la sameeyey 2007 - CSA census), 86% shacabka deegaanka waxay ku nool yihiin dhulka miyiga ah badankooduna waa xoolo-dhaqato
 
 Maamul ahaan degaanku wuxuu ka kooban yaha 11 maamul-gobaleed,6 maamul magaalo iyo 93 degm{{Gumud}}waxaa jira in ka badan 100 canter ama qabalee oo u dhigma degmo ama gobol oo aan wali assessment sax ah lagu samaynin.
+
+Kali wwxaan saxayaa tirada Dadka o lagu qiyaaso 8.5 million 
+By Hassan Abdi Deck
