--- a/Burco.mw
+++ b/Burco.mw
@@ -131,6 +131,9 @@ Burco waxaa ku yaala xaafado badan oo aan la tirin karin, kuwa ugu waaweyn waxaa
 * Maxamed Cali
 * Sayladda
 * Barsiigo
+* City Plaza 
+* Aden Selebaan
+* Barqodhereg
 
 
 == Saylada Xoolaha ee Uguwayn waqooyiga Somalia ==
