--- a/Template:Degmooyinka_Gobolka_Bakool%2Fdoc.mw
+++ b/Template:Degmooyinka_Gobolka_Bakool%2Fdoc.mw
@@ -1,9 +1,3 @@
 {{Documentation subpage}}
 <!-- Please place categories where indicated at the bottom of this page and interwikis at Wikidata (see [[Wikipedia:Wikidata]]) -->
-== Usage ==
-
-
-<includeonly>{{sandbox other||
-<!-- Categories below this line, please; interwikis at Wikidata -->
-
-}}</includeonly>
+Degmada Buurdhuxunle Waa Magaalada Ganacsiga Gobalka Bakool Soomaaliyaa
