*Empty MediaWiki Message*

--- a/Gelinsoor.mw
+++ b/Gelinsoor.mw
@@ -1,3 +1,3 @@
-Gelinsoor waa magaalo ka mid ah magaalooyinka maamulka Galmudug, waxayna ku taala Waqooyiga Gobolka Galgaduud, waa magaalo Muhiim ah, waxaana mara laamida isku xira Koofurta iyo Waqooyiga Soomaaliya,magaalada Galinsoor waxaa Waqooyi ka xiga Bandiiradley, Koofurtana Cadaado, Galinsoor waxaa ku yaalo Labo iskuul, hoose dhexe iyo Sare, iskuulka hoose dhexe waxaa loogu magac daray allaha u Naxariistee Gen. Maxamed Faarax Caydiid, Magaalooyinka hoos taga waxaa ka mid ah, Bandiiradley, Dhabad, Mircawleed, Dacdheer, Deeqlo, Gaxandhaale, Dhardhaar, Tuulo Qorax, Wadd iyo Tuulooyin Badan, dadka Degmada [[Gelinsoor]] waxay nolol ahaan ku tiirsan yihiin Xoolaha nool iyo Ganacsi, Gelinsoor waa Magaalo ay daashadeen Colaado sokeeye laakin hadda waxay noqotay magaalada ugu horeysa Gobolada dhexe Xaga ammaanka,Waxbarashada iyo Caafimaadka, waxaana dadaal iyo Juhdi ay galiyeen dadka deegaanka gaar ahaan Jaaliyada Dibada iyo Dhalinyarada, kuwaasoo aas aasay, iskoolo wax lagu barto, General Caydiid Primary and Secondary School ayaa kaalin muuqata ka qaatay Waxbarashada Degmada. magaalada waxaa wada degi jiray beelaha sacad iyo saleeban laakiin wixii ka danbeeyey 2005 waxaa degen beesha sacad kaliya dagaalo dhacay sababtood oo beesha saleebaan kaga guurtay.
+Gelinsoor waa magaalo ka mid ah magaalooyinka maamulka Galmudug, waxayna ku taala Waqooyiga Gobolka Galgaduud, waa magaalo Muhiim ah, waxaana mara laamida isku xira Koofurta iyo Waqooyiga Soomaaliya,magaalada Galinsoor waxaa Waqooyi ka xiga Bandiiradley, Koofurtana Cadaado, Magaalooyinka hoos taga waxaa ka mid ah, Bandiiradley, Dhabad, Mircawleed, Dacdheer, Deeqlo, Gaxandhaale, Dhardhaar, Tuulo Qorax, Wadd iyo Tuulooyin Badan, dadka Degmada [[Gelinsoor]] waxay nolol ahaan ku tiirsan yihiin Xoolaha nool iyo Ganacsi, Gelinsoor waa Magaalo ay daashadeen Colaado sokeeye laakin hadda waxay noqotay magaalada Kaliya ee laga haysto dadkii lahaa, waxaana dadaal iyo Juhdi dadaal nabadayn la isku dayay In badan walise ma dhicin wax laga gungaaray. magaalada waxaa wada degi jiray beelaha Wagardhac iyo qaraabadooda dad ka Soo jeeda beesha Sacad laakiin wixii ka danbeeyey 1994 waxaa degen beesha sacad kaliya dagaalo sokeeye awgood.
 
-Hadaba magaalada Gelinsoor waxaa dagan beelaha Habar Gidir '''Sacad iyo marehaan wagardhac .waana magaalo saaran laamiga oo u dhaxeyso magaalooyinka Gaalkacyo iyo Cadaado.
+Hadaba magaalada Gelinsoor waxaa dagan beelaha '''Sacad iyo marehaan wagardhac .waana magaalo saaran laamiga oo u dhaxeyso magaalooyinka Gaalkacyo iyo Cadaado.
