--- a/Soomaali_Galbeed.mw
+++ b/Soomaali_Galbeed.mw
@@ -1,92 +1,277 @@
-{{Coord|7.4387305|N|44.2968750|E|source:nlwiki_region:ET_scale:3200000|format=dms|display=title}}
 {{Infobox settlement
-<!-- See Template:Infobox settlement for additional fields and descriptions -->
-| name                    = Gobolka Soomaali Galbeed
-| native_name             = 
-| settlement_type         = [[Gobol]]
-| image_skyline           = 
-| seal_alt                = 
-| image_shield            = 
-| shield_alt              = 
-| nickname                =Dawlad Deeggaanka Soomaalida Itoobiya 
-| motto                   = 
-| mottoeng                =
-| image_map               = Somali in Ethiopia.svg
-| map_alt                 = 
-| map_caption             = Map Cadaynaya qaybta Soomaaliya ka maqan
-| pushpin_map             = 
-| pushpin_label_position  = 
-| pushpin_map_alt         = 
-| pushpin_map_caption     = 
-| latd  =  |latm  =  |lats  =  |latNS  = 
-| longd =  |longm =  |longs =  |longEW = 
-| coor_pinpoint           = 
-| coordinates_type        = 
-| coordinates_display     = inline,title
-| coordinates_footnotes   = 
-| subdivision_type        = Dalka
-| subdivision_name        = {{flag|Ethiopia}}
-| subdivision_type1       = 
-| subdivision_name1       =  
-| subdivision_type2       = 
-| subdivision_name2       = 
-| subdivision_type3       = 
-| subdivision_name3       = 
-| established_title       = 
-| established_date        = 
-| founder                 = 
-<!-- seat, smaller parts ------->
-| parts_type              = <!-- defaults to: Boroughs -->
-| parts_style             =  
-| parts                   = <!-- parts text, or header for parts list -->
-| p1                      =  
-| p2                      =  
-| seat_type               = Xarunta
-| seat                    = [[Jigjiga]]
-| government_footnotes    = 
-| leader_party            = 
-| leader_title            =  
-| leader_name             = Mustafe Cagjar
-| unit_pref               = Metric<!-- or US or UK -->
-| area_footnotes          =  
-| area_total_km2          = 279,252
-| area_land_km2           = 
-| area_water_km2          = 
-| area_water_percent      = 1%
-| area_note               = 
-| elevation_footnotes     = 
-| elevation_m             = 
-| population_footnotes    = 
-| population_total        = 5,318,000
-| population_as_of        = [[2013]]
-| population_density_km2  = auto
-| population_demonym      = [[Soomaali]]
-| population_note         = 
-| timezone1               = [[Saacadda Afrikada Bari|EAT]]
-| utc_offset1             = +3
-| timezone1_DST           =
-| utc_offset1_DST         = 
-| postal_code_type        = 
-| postal_code             = 
-| area_code_type          = 
-| area_code               = 
-| iso_code                = [[ISO 3166-2:ET|ET-SO]]
-| website                 = <!-- {{URL|example.com}} -->
-| footnotes               = 
+<!-- See Template:Infobox settlement for additional fields and descriptions -->| name                            = Somali  Region
+| official_name                   = 
+| native_name                     = (Gobolka Ogaden)
+ <br>{{small|የሶማሌ ክልል}}
+| native_name_lang                = Somali
+| settlement_type                 = [[Gobolada Itoobiya|Dowlad goboleed]]
+| image_skyline                   = 
+| image_alt                       = 
+| image_caption                   = 
+| image_flag                      = Somali State original flag.jpg
+| flag_alt                        = 
+| image_seal                      = Somali Region emblem.png
+| seal_alt                        = 
+| image_shield                    = 
+| shield_alt                      = 
+| nickname                        = 
+| motto                           = 
+| image_map                       = Somali Region Map.svg
+| map_alt                         = 
+| map_caption                     = Qariirada [[Itoobiya]] oo muujinaya gobolka somaligalbeed
+| pushpin_map                     = 
+| pushpin_label_position          = 
+| pushpin_map_alt                 = 
+| pushpin_map_caption             = 
+| coor_pinpoint                   = 
+| coordinates_footnotes           = 
+| subdivision_type                = Dalka
+| subdivision_name                = {{flag|Itoobiya}}
+| subdivision_type1               = 
+| subdivision_type2               = 
+| subdivision_type3               = 
+| subdivision_name1               = 
+| subdivision_name2               = 
+| subdivision_name3               = 
+| established_title               = 
+| established_date                = 
+| founder                         = <!-- seat, smaller parts ------->
+| seat_type                       = Caasimada
+| seat                            = [[Jigjiga]]
+| parts_type                      = <!-- defaults to: Boroughs -->
+| parts_style                     = 
+| parts                           = <!-- parts text, or header for parts list -->
+| p1                              = 
+| government_footnotes            = 
+| leader_party                    = 
+| leader_title                    = [[Madaxweynayaasha ku meel gaarka ah ee soomaali galbeed, Itoobiya|ku meel gaarka ah]]
+| leader_name                     = [[Cabdi Maxamuud Cumar]]
+| leader_title1                   = Madaxweyne ku xigeenka kumeelgaarka ah
+| leader_name1                    = Cabdi Maxamuud Cumar
+| unit_pref                       = Metric<!-- or US or UK -->
+| area_footnotes                  = 
+| area_rank                       = 2aad
+| area_total_km2                  = 327,068
+| area_land_km2                   = 
+| area_water_km2                  = 
+| area_water_percent              = 1%
+| area_note                       = 
+| elevation_footnotes             = 
+| elevation_m                     = 
+| population_total                = 9.654 million<ref name=CSApop>{{cite book |title=Population Projection of Ethiopia for All Regions At Wereda Level from 2014 – 2017 |publisher=Federal Democratic Republic of Ethiopia Central Statistical Agency |url=http://www.csa.gov.et/ehioinfo-internal |accessdate=4 June 2018 }}</ref>
+| population_as_of                = 2017
+| population_footnotes            = 
+| population_density_km2          = auto
+| population_demonym              = [[Dadka Soomaalida|Soomaali]]
+| population_note                 = 
+| timezone1                       = [[Waqtiga Bariga Afrika|EAT]]
+| utc_offset1                     = +3
+| timezone1_DST                   = 
+| utc_offset1_DST                 = 
+| postal_code_type                = 
+| postal_code                     = 
+| area_code                       = +251
+| area_code_type                  = 
+| iso_code                        = [[ISO 3166-2:ET|ET-SO]]
+| blank_name_sec1                 = [[Tilmaanta Horumarka Aadanaha|HDI]] (2017)
+| blank_info_sec1                 = 0.409<ref name="GlobalDataLab">{{Cite web|url=https://hdi.globaldatalab.org/areadata/shdi/|title=Sub-national HDI - Area Database - Global Data Lab|website=hdi.globaldatalab.org|language=en|access-date=2018-09-13}}</ref><br/>{{color|#900|low}} · [[List of Ethiopian regions by Human Development Index|10th]]
+| website                         = 
+| coordinates                     = 
+| mottoeng                        = 
+| p2                              = 
 }}
 
-'''Soomaali Galbeed''', ama '''Dowlad Deeggaanka Soomaalida Ethiopia''' ([[DDS|DDSI]]), waa ismaamul goboleed oo ku hoos jira dalka [[Itoobiya]]. Maamulkan waxa uu leeyahay madax iyo ciidan u gooni ah waxuuna ku yaalaa [[Geeska Afrika]]. Ismaamulka Soomaali Galbeed waxay daris latahay [[Somaliland]] oo ka xigta woqooyiga, [[Soomaaliya]] oo ka xigta bariga, iyo koonfurta, koonfur galbeed na waxaa xiga gobolka [[Woqooyi Bari, Kiinya|Waqooyi Bari]] ee dalka Kiiniya, galbeedkana gobolada kale ee Itoobiya. [[DDS|DDSI]] waxay tahay dhul ay [[Soomaaliya|Soomaalidu]] ay leedahay ee gumaystihii reer Yurub ku daray wadanka [[Itoobiya]], sidii gobolka [[Woqooyi Bari, Kiinya|Waqooyi Bare]] ee maanta [[Kiinya|Kiiniya]] hoos yaala. 
+'''Soomaali Galbeed''' sidoo kale loo yaqaan '''Dawladda Deegaanka Soomaalida Itoobiya''' oo loo soo gaabiyo DDSI waa maamulka iyo dowlada deegaada Soomaali Galbeed ee maanta ka tirsan dowlada [[Itoobiya]].Dawladda Deegaanka Soomaalidu wuxuu ka mid yahay [[Dowlad Deegaanada Itoobiya|sagaalka dawlad deegaan]] ee Jamhuuriyadda Dimuqraadiga Itoobiya Wuxuu ku fadhiyaa bariga iyo bari-koonfureed ee dalka Itoobiya. Baaxadda dhulka waxa lagu qiyaasaa 350,000 km2.Deegaanku wuxuu ku dhacayaa inta u dhaxaysa loolka  40-110 Waqooyi iyo Dhigta 40 -48 0E Bari.
+
+Deegaanku wuxuu xad la leeyahay, dhinaca konfureed waxa ka xiga [[Kenya]], dhinaca bari iyo koonfur bari waxa ka xiga [[Soomaaliya]], dhinaca galbeed iyo koonfur waxa ka xiga deegaanka [[Oromiya]], dhinaca galbeed iyo waqooyi galbeedna waxa ka xiga deegaanka [[canfar|canfarta]].Deegaanku inta uu ka sarreeyo badda waxa lagu qiyaasaa inta u dhaxaysa 500-1600 meters. Cimilada deegaanka soomaalida waxa lagu qiyaasaa dhul daaqsin isugu jira oomane, dhul kooban oo hela roob ku filan iyo dhul ay maraan wabiyo kala duwan. Heer-kulka deegaanku wuxuu u dhaxeyaa 20-45°C Celceliska roobka degaanku helaa wuxuu u dhaxeeyaa 300-500 mm.
+
+Tirada dadka ku nool deegaanka waxa lagu qiyaasaa 18.4 million (Tiro-koobkii la sameeyey 2007 - CSA census), 86% shacabka deegaanka waxay ku nool yihiin dhulka miyiga ah badankooduna waa xoolo-dhaqato
+
+Maamul ahaan degaanku wuxuu ka kooban yaha 11 maamul-gobaleed,6 maamul magaalo iyo 93 degm 
 
 ==Hordhac==
-Somali Galbeed waxee leedahay taariikh aad u dheer. gumeestihii ingriiska ayaa soo gumeestay dhamaadkii 1890ki, waxaana la dhihi jiray ingriiska somaliland, waxoona ku daray dalka itoobiya 1897. ingriiska markale ayoo isku dayay in oo ka soo saaro ogadenia dalka itoobiya,waa markii oo ingiriiska iyo talyaaniga ee wada shaqeen ee sameeyeen, sida ee gobolada soomaalida u miday lahaayeen. [[Dagaalkii Labaad ee Aduunka]] itoobiya waxee isku dayday in ee qaadato, dhulka [[Eratareya]] iyo ogadenia. ingriiska dhul yar ayoo ka qaatay ogadenia oo ka bilaawdo, magaalada [[haud]] ilaa fransiiska somaliland oo hatta la dhoho [[Jabuuti]]. ingriiska dhulkaas ma ku darin itoobiya ilaa sanadka marka oo ahaa 1954tii. 1977 ayaa waxaa dhacday, dagaalkii xoreenta Soomaali galbeed, waa markii ee itoobiya dhibaateysay shacabka ogadenia, waagaas itoobiya waxee iskugu wici jirtay libaaxyada afrika, laakiin madaxweynihii soomaaliya [[Maxamed Siyaad Barre]] oo dhalasho ahaan ka soo jeedo dhulka soomaali galbeed ayaa aad uuga xumaaday, dhibaatada ee itoobiyaanka ku haayeen dhulkaas, waa markii oo duulaan ku qaaday itoobiya.ciidamada Soomaaliya iyo somaligalbeed, ayaa isku dayay, in ee itoobiya ka bixiyaan dhulka ogadenia. ciidmada soomaaliya waxee markaas gacanta ku haayeen dhulka ogadenia oo dhan, caasimada addis ababa waxyar ee u jireen.
-aduunka marka oo arkay, itoobiya oo dhamaaneeso ayaa waxaa garab siiyay wadamada [[Ruushka]] oo markaas ahaa [[Midowga Sofiyet]],[[Kuuba]] iyo [[Koonfur Yemen]]. ciidamada soviet unionka ayaa askarta somalida dib u celiyay, markii ee XDS ee dareemeen in ee ku aadin ciidamada ruushka, dhaqaalihii neh oo ku yaraaday. qaar ka mid ah ciidamada xooga ayaa sii joogay dhulka soomaali galbeed, ayaga oo wadaniyad ka muuqato, waxeena la dagaalamaayeen ciidamada shisheeye iyo kuwa itoobiyaanka.
+Somali Galbeed waxee leedahay taariikh aad u dheer. gumeestihii ingriiska ayaa soo gumeestay dhamaadkii 1890ki, waxaana la dhihi jiray ingriiska somaliland, waxoona ku daray dalka itoobiya 1897. ingriiska markale ayoo isku dayay in oo ka soo saaro ogadenia dalka itoobiya,waa markii oo ingiriiska iyo talyaaniga ee wada shaqeen ee sameeyeen, sida ee gobolada soomaalida u miday lahaayeen. [[Dagaalkii Labaad ee Aduunka]] itoobiya waxee isku dayday in ee qaadato, dhulka [[Eratareya]] iyo ogadenia. ingriiska dhul yar ayoo ka qaatay ogadenia oo ka bilaawdo, magaalada [[haud]] ilaa fransiiska somaliland oo hatta la dhoho [[Jabuuti]]. ingriiska dhulkaas ma ku darin itoobiya ilaa sanadka marka oo ahaa 1954tii. 1977 ayaa waxaa dhacday, dagaalkii xoreenta Soomaali galbeed, waa markii ee itoobiya dhibaateysay shacabka ogadenia, waagaas itoobiya waxee iskugu wici jirtay libaaxyada afrika, laakiin madaxweynihii soomaaliya [[Maxamed Siyaad Barre]] oo dhalasho ahaan ka soo jeedo dhulka soomaali galbeed ayaa aad uuga xumaaday, dhibaatada ee itoobiyaanka ku haayeen dhulkaas, waa markii oo duulaan ku qaaday itoobiya.ciidamada Soomaaliya iyo somaligalbeed, ayaa isku dayay, in ee itoobiya ka bixiyaan dhulka ogadenia. ciidmada soomaaliya waxee markaas gacanta ku haayeen dhulka ogadenia oo dhan.
 
-==Deegaanka==
-Ogaadeeniya waa deegaan ku yaala bariga wadanka [[Waqooyi]] kaasi oo degaan [[Soomaali|Dad Soomaali]] ah.
-Deegaanka Ogaadeeniya waaa ilaa 200,000 square kilometres, taasi oo xad la leh [[Djibouti]], [[Soomaaliya]] iyo wadanka [[Kenya]].<ref>Gebru Tareke, "The Ethiopia-Somalia War of 1977 Revisited," in Board of Trustees, Boston University, ''The International Journal of African Historical Studies''. Boston University African Studies Center, 2000, p. 636.</ref> Intaasi waxaa dheer, magaalooyinka ugu caansan waxaa ka mid ah [[Jigjiga]], [[Dhagaxbuur]], [[Godey]], [[Qabri Dahar]], [[Fiiq]], Shilavo, Kelafo, [[Wardheer]] iyo Danaan.<ref>Ayele Gebre-Mariam, [http://www.nccr-north-south.unibe.ch/publications/Infosystem/On-line%20Dokumente/Upload/AGM_CriticalIssueLand.pdf ''The Critical Issue of Land Ownership''], Working Paper No. 2 (Bern: NCCR North-South, 2005), p. 12 (accessed 19 January 2009)</ref>
+==Luqada==
+98.82% waxaa looga hadlaa Af soomaali. luqadaha yar oo looga hadlo waxaa ka mid ah Af Amxaari  (0.67%), iyo Af Oromo (0.51%).
 
-==Taariikh==
-[[Image:Somali in Ethiopia.svg|frame|right|Maabka Itoobiya oo muujinaya gobolka Waqooyi-Galbeed.]]
+==Diinta==
+== Religion ==
+99.4% shacabka deegaanka waxee qaateen diinta [[Muslimiinta Itoobiya|Islaamka]] , 0.50% [[Masiixiga Orthodoks ee itoobiya|Karishtaanka Orthodoks]], iyo 0.10% oo ah kuwo raaco diimo kale.<ref>[http://www.csa.gov.et/index.php?option=com_rubberdoc&view=doc&id=274&format=raw&Itemid=521 " Census 2007 Tables: Somali Region"], Tables 2.1, 2.5, 3.1, 3.2, 3.4</ref>
+== Liiska madaxweyneyaasha soomaali galbeed ==
+
+{| class="wikitable" style="font-size:85%;text-align:center"
+! rowspan="2" |'''Lam.'''
+! rowspan="2" |Sawirka
+! rowspan="2" |President<br />{{small|(Dhalasho–Dhimasho)}}
+! colspan="3" |Muddada Xafiiska
+! colspan="2" rowspan="2" |Xisbi
+|-
+!Xafiiska la wareegay
+!Xafiiska ka tagay
+! Muddada
+|-
+
+|1
+|
+|[[Abdullahi Mohamed Sa'di]]
+|23 Janaayo 1993
+|  Nofeembar 1993
+|10 Bilood,
+
+! style="background:RED" |
+|[[Ethiopian Somali Democratic League|Ethiopian Somali Democratic League (ESDL)]].<ref>Tobias Hagmann, Mohamud H. Khalif, [http://tobiashagmann.freeflux.net/files/media/publications/non-refereed/hagmann_mhk_bildhaan-2006.pdf "State and Politics in Ethiopia's Somali region since 1991"] {{Webarchive|url=https://web.archive.org/web/20110831063758/http://tobiashagmann.freeflux.net/files/media/publications/non-refereed/hagmann_mhk_bildhaan-2006.pdf |date=2011-08-31 }}, ''Bildhaan: the International Journal of Somali Studies'', '''6''' (2006), p. 29</ref>
+|-
+
+|2
+|
+|[[Hassan Jire Qalinle]]
+|  1993
+|  Abriil 1994
+|1 Sanadka,
+
+! style="background:RED" |
+|[[Ethiopian Somali Democratic League|Ethiopian Somali Democratic League (ESDL)]]
+|-
+
+|3
+|
+|[[Abdirahman Ugas Mohumed Qani]]
+|  Abriil 1994
+|  1995
+|1 Sano,
+
+! style="background:RED" |
+|[[Ethiopian Somali Democratic League|Ethiopian Somali Democratic League (ESDL)]]
+|-
+
+|4
+|
+|[[Ahmed Makahel Hussein]]
+|  1995
+|  Juun 1995
+|4 Bilood,
+15 Maalin
+
+! style="background:RED" |
+|[[Ururka Dimuqraadiga soomaalida itoobiya|Ethiopian Somali Democratic League (ESDL)]]
+|-
+
+|5
+|
+|[[Eid Daahir Farah]]
+|  Juun 1995
+|  Oktoobar 1997
+|2 Sano,
+4 Bilood
+
+! style="background:RED" |
+|[[Ethiopian Somali Democratic League|Ethiopian Somali Democratic League (ESDP)]].<ref>Asnake Kefale Adegehe, [http://hdl.handle.net/1887/13839 ''Federalism and ethnic conflict in Ethiopia: a comparative study of the Somali and Benishangul-Gumuz regions''] Department of Political Science, Faculty of Social and Behavioural Sciences, Leiden University, Doctoral thesis (2009), p. 138</ref>
+|-
+
+| rowspan="2" |6
+| rowspan="2" |
+| rowspan="2" |[[Khader Ma'alen Ali]]
+| rowspan="2" | Oktoobar 1997
+| rowspan="2" | Oktoobar 2000
+| rowspan="2" |3 Sano,
+
+! style="background:RED" |
+|[[Ethiopian Somali Democratic League|Ethiopian Somali Democratic League (ESDL)]]<br />{{small|(ilaa 1998)}}
+|-
+
+!style="background:Yellow" |
+|[[Ethiopian Somali People's Democratic Party|Ethiopian Somali People's Democratic Party (ESPDP)]]
+|-
+
+|7
+|
+|[[Abdulrashed Dulane]]
+|  oktoobar 2000
+| 21 Luuliyo 2003
+|2 Sano,
+10 Bilood
+
+! style="background:Yellow" |
+|[[Ethiopian Somali People's Democratic Party|Ethiopian Somali People's Democratic Party (ESPDP)]]
+|-
+
+|8
+|
+|[[Abdi Jibril Ali]]
+|21 Julaay 2003
+|   Oktoobar 2005
+|2 Sano, 
+3 Bilood,
+
+! style="background:Yellow" |
+|[[Ethiopian Somali People's Democratic Party|Ethiopian Somali People's Democratic Party (ESPDP)]]
+|-
+
+|9
+|
+|[[Abdullahi Hassan Mohamed ''Lugbuur'']]
+|  Oktoobar 2005
+|  Nofeembar 2008
+|3 Sano,
+1 Bil
+
+! style="background:Yellow" |
+|[[Ethiopian Somali People's Democratic Party|Ethiopian Somali People's Democratic Party (ESPDP)]]
+|-
+
+|10
+|
+|[[Daud Mohamed Ali '' Daud Axmaar'']]
+|  Nofeembar 2008
+| 12 Jul 2010
+|1 Sano,
+9 Bilood
+
+! style="background:Yellow" |
+|[[Xisbiga dimuqraadiga soomaalida itoobiya|Ethiopian Somali People's Democratic Party (ESPDP)]]
+|-
+
+|11
+|
+|[[Abdi Mohamoud Omar|Abdi Mohamoud Omar (Cabdi Ilay)]]
+|12 Luuliyo 2010
+| 08 Agoosto 2018
+|8 Sano,
+1 Bil
+
+! style="background:Yellow" |
+|[[Ethiopian Somali People's Democratic Party|Ethiopian Somali People's Democratic Party (ESPDP)]]
+|-
+
+|12
+|
+|[[Ahmed Abdi Sh.Mohamed|Ahmed Abdi Sh.Mohamed (Ilkacase)]]
+|08 Agoosto 2018
+| 22 Agoosto 2018
+|14 Maalin,
+
+! style="background:Yellow" |
+|[[Ethiopian Somali People's Democratic Party|Ethiopian Somali People's Democratic Party (ESPDP)]]
+|-
+
+| rowspan="3" |13
+| rowspan="3" |
+| rowspan="3" |[[Mustafa Muhummed Omer|Mustafa Muhummed Omer (Cagjar)]]<br />{{small|(1970–)}}
+| rowspan="3" |22 Aug 2018
+| rowspan="3" | Hadda
+| rowspan="3" |
+
+! style="background:Yellow" |
+|[[Ethiopian Somali People's Democratic Party|Somali People's Democratic Party (ESPDP)]]  <br />{{small|(ilaa 03 Abriil 2019)}}
+|-
+! style="background:CornflowerBlue"|
+| [[Ethiopian Somali People's Democratic Party|Somali Democratic Party (SDP)]]<ref>https://www.ethiopiaobserver.com/2018/08/12/ahmed-shide-named-chairman-of-the-somali-region-ruling-party/</ref><ref>[http://www.afdevinfo.com/htmlreports/peo/peo_611.html Dirir Mohamoud (Ethiopia)] {{webarchive |url=https://web.archive.org/web/20090428045225/http://www.afdevinfo.com/htmlreports/peo/peo_611.html |date=28 April 2009 }} AfDevInfo website (accessed 14 May 2009)</ref><br />{{small|(ilaa 30 Nofeembar 2019)}}
+|-
+
+!style="background:Yellow" |
+|[[Prosperity Party]]<ref>[https://addisstandard.com/exclusive-third-day-eprdf-ec-discussing-prosperity-party-regulation-find-the-draft-copy-obtained-by-as/ Exclusive: Third day EPRDF EC discussing “Prosperity Party” Regulation. Find the draft copy obtained by AS]</ref>
+|}
 
 ==Sidoo kale fiiri==
 *[[Soomaali Galbeed]]
@@ -98,4 +283,4 @@ Deegaanka Ogaadeeniya waaa ilaa 200,000 square kilometres, taasi oo xad la leh [
 
 {{commonscat|Somali Region|Soomaali Galbeed}}
 
-[[Category:Soomaali Galbeed| ]]
+[[Category:Soomaali Galbeed]] [[category:itoobiya]]
