*Empty MediaWiki Message*

--- a/Template:Dalalka_Afrika.mw
+++ b/Template:Dalalka_Afrika.mw
@@ -8,7 +8,7 @@
 
 | group1 = Dalal Madax Banaan
 | list1 =
-[[Aljeeriya]]{{·}} [[Angola]]{{·}} {{nowrap|[[Jamhuuriyadda Bartamaha Afrika]]}}{{·}} [[Benin]]{{·}} [[Botswana]]{{·}} {{nowrap|[[Burkina Faso]]}}{{·}} [[Burundi]]{{·}} [[Eratareya]]{{·}} [[Gaana]]{{·}} [[Gabon]]{{·}} [[Gambia]]{{·}} [[Guinea]]{{·}} {{nowrap|[[Guinea-Bissau]]}}{{·}} {{nowrap|[[Ikweetiga Guinea ]]}}{{·}} [[Itoobiya]]{{·}} [[Jabuuti]]{{·}} [[Jad]]{{·}} {{nowrap|[[Kab Ferde]]}}{{·}} [[Kamiruun]]{{·}} [[Kiinya]]{{·}} [[Komoros]]{{·}} {{nowrap|[[Jamhuuriyadda Kongo]]}}{{·}} {{nowrap|[[Jamhuuriyada Dimuqaraadiga Kongo]]}}{{·}} {{nowrap|[[Koonfur Afrika]]}}{{·}} [[Koonfur Suudaan]]{{·}} [[Lesotho]]{{·}} [[Liberia]]{{·}} [[Libiya]]{{·}} [[Maali]]{{·}} [[Madagaskar]]{{·}} [[Malaawi]]{{·}} [[Marooko]]{{·}} [[Masar]]{{·}} [[Mauritania]]{{·}} [[Mauritius]]{{·}} [[Musanbiig]]{{·}} [[Nambiya]]{{·}} [[Nayjar]]{{·}} [[Nayjeeriya]]{{·}} [[Ruwanda]]{{·}} [[Saambiya]]{{·}} [[Sao Tome iyo Prinsipe]]{{·}} [[Seyshelles]]{{·}} {{nowrap|[[Sierra Leone]]}}{{·}} [[Simbaabwi]]{{·}} [[Sinigaal]]{{·}} [[Soomaaliya]]{{·}} [[Suudaan]]{{·}} [[Swasiland]]{{·}} [[Tansaaniya]]{{·}} [[Togo]]{{·}} [[Tunisiya]]{{·}} {{nowrap|[[Xeebta Foolmaroodi]]}}{{·}} [[Yugandha]]
+[[Aljeeriya]]{{·}} [[Angola]]{{·}} {{nowrap|[[Jamhuuriyadda Bartamaha Afrika]]}}{{·}} [[Benin]]{{·}} [[Botswana]]{{·}} {{nowrap|[[Burkina Faso]]}}{{·}} [[Burundi]]{{·}} [[Eratareya]]{{·}} [[Gaana]]{{·}} [[Gabon]]{{·}} [[Gambia]]{{·}} [[Guinea]]{{·}} {{nowrap|[[Guinea-Bissau]]}}{{·}} {{nowrap|[[Equatorial Guinea ]]}}{{·}} [[Itoobiya]]{{·}} [[Jabuuti]]{{·}} [[Jad]]{{·}} {{nowrap|[[Kab Ferde]]}}{{·}} [[Kamiruun]]{{·}} [[Kiinya]]{{·}} [[Komoros]]{{·}} {{nowrap|[[Jamhuuriyadda Kongo]]}}{{·}} {{nowrap|[[Jamhuuriyada Dimuqaraadiga Kongo]]}}{{·}} {{nowrap|[[Koonfur Afrika]]}}{{·}} [[Koonfur Suudaan]]{{·}} [[Lesotho]]{{·}} [[Liberia]]{{·}} [[Libiya]]{{·}} [[Maali]]{{·}} [[Madagaskar]]{{·}} [[Malaawi]]{{·}} [[Marooko]]{{·}} [[Masar]]{{·}} [[Mauritania]]{{·}} [[Mauritius]]{{·}} [[Musanbiig]]{{·}} [[Nambiya]]{{·}} [[Nayjar]]{{·}} [[Nayjeeriya]]{{·}} [[Ruwanda]]{{·}} [[Saambiya]]{{·}} [[Sao Tome iyo Prinsipe]]{{·}} [[Seyshelles]]{{·}} {{nowrap|[[Sierra Leone]]}}{{·}} [[Simbaabwi]]{{·}} [[Sinigaal]]{{·}} [[Soomaaliya]]{{·}} [[Suudaan]]{{·}} [[Swasiland]]{{·}} [[Tansaaniya]]{{·}} [[Togo]]{{·}} [[Tunisiya]]{{·}} {{nowrap|[[Xeebta Foolmaroodi]]}}{{·}} [[Yugandha]]
 
 | group2 = {{longitem|Dalal ismagacaabay}}
 | list2 =
