--- a/Degmada_Feer-feer.mw
+++ b/Degmada_Feer-feer.mw
@@ -1,4 +1,4 @@
-'''Feer-feer''' ([[Af-Ingiriis]]: [https://en.m.wikipedia.org/wiki/Ferfer# Ferfer]) waa [[Magaalo weyn|magaalo]] ku taala Xadka kala bara labada [[Wadan|wadan ee]] [[Itoobiya]] iyo [[Soomaaliya]]. Waxa ay uqeybsantahay [[Degmo|Degmada]] Fee-feer ee [[DDS|Dawlada Deegaanka Soomaalida]] Itoobiya iyo Degmada feer-feer ee [[Hirshabeelle|Maamul goboleedka Hir-Shabeelle]] ee Dalka [[Soomaaliya]]. Magaalada FeerFeer waxay u dhowdahay gobolka [[Hiiraan]], waxayna dhacdaa dhigta iyo loolka 05°05′N45°05′E. Guud ahaan, magaalada Feer-Feer waxay biyaha bada ka sareeysaa joog dhan 177 mitir.
+'''Feer-feer''' ([[Af-Ingiriis]]: [https://en.m.wikipedia.org/wiki/Ferfer# Ferfer]) waa [[Magaalo weyn|magaalo]] caan ah oo ku taala Xadka kala bara labada [[Wadan|wadan ee]] [[Itoobiya]] iyo [[Soomaaliya]]. Waxa ay uqeybsantahay [[Degmo|Degmada]] Fee-feer ee [[DDS|Dawlada Deegaanka Soomaalida]] ee Dalka [[Itoobiya]] iyo [[Degmada feerfeer|Degmada feer-feer]] ee [[Hirshabeelle|Maamul goboleedka Hir-Shabeelle]] ee Dalka [[Soomaaliya]]. Magaalada FeerFeer waxay u dhowdahay gobolka [[Hiiraan]], waxayna dhacdaa dhigta iyo loolka 05°05′N45°05′E. Guud ahaan, magaalada Feer-Feer waxay biyaha badda ka sareeysaa joog dhan qiyaastii 177 mitir.Waana dhul Simman waxoogaay Buuro ah ku hareeraysanyihiin.
 
 == Hordhac:- ==
 Feerfeer waa [[Degmo]] [[Taariikh|taariikhi]] ah oo ku taalo xadka ay wadaagaan labadda dal ee [[itoobiya]] iyo [[Soomaaliya]] Gaar ahaan waxay dhacdaa dhanka waqooyiga bari ee [[Gobolka Hiiraan|gobolka hiiraan]], waxayna u kala qeeybsantaa Degmada [[Feerfeer|Feer feer]] ee [[DDS|Dawladda Deegaanka Soomaalida]] [[Itoobiya]] iyo Degmada Feer feer ee [[Soomaaliya|Maamul goboleedka Hir-shabeelle Soomaaliya]]. Degmada feer-feer [[Soomaaliya]] ayaa si rasmi ah degmonimadeeda loogu dhawaaqay 9kii bishii 8aad sanadka 2017ka.Waxaana wareegto kasoo baxday xafiiska madaxweynaha maamul goboleedka Hir-[[Hirshabeelle|Shabeelle]] lagu shaaciyay in si buuxda loogu aqoonsaday maamul degmo oo hoos yimaada maamulka gobolka [[Hiiraan]]. [[Soomaaliya|Degmadaan]] daanteeda [[Itoobiya]]<nowiki/>waxaa degan dad ka badan 50,411 oo qof, oodhamaan wada soomaali ah.waxaa hoos yimaada tuullooyin dhowr ah ooy kamid yihiin: [[Abaaley|Abaaleey]],Buur-ukur,Baar-magoog IWM.Dadka dega degmada [[Feerfeer|Feer Feer]] ayaan ahayn kuwo yaqaana xumaanta, taa badelkeeda waxa ay yihiin dad jecel wanaaga iyo khayrka.
