*Empty MediaWiki Message*

--- a/Soomaali_Galbeed.mw
+++ b/Soomaali_Galbeed.mw
@@ -81,13 +81,11 @@
 | p2                              = 
 }}
 
-'''Soomaali Galbeed''' sidoo kale loo yaqaan '''Dawladda Deegaanka Soomaalida Itoobiya''' oo loo soo gaabiyo DDSI waa maamulka iyo dowlada deegaada Soomaali Galbeed ee maanta ka tirsan dowlada [[Itoobiya]].Dawladda Deegaanka Soomaalidu wuxuu ka mid yahay [[Dowlad Deegaanada Itoobiya|sagaalka dawlad deegaan]] ee Jamhuuriyadda Dimuqraadiga Itoobiya Wuxuu ku fadhiyaa bariga iyo bari-koonfureed ee dalka Itoobiya. Baaxadda dhulka waxa lagu qiyaasaa 350,000 km2.Deegaanku wuxuu ku dhacayaa inta u dhaxaysa loolka  40-110 Waqooyi iyo Dhigta 40 -48 0E Bari.
+'''Soomaali Galbeed''' sidoo kale loo yaqaan '''Dawladda Deegaanka Soomaalida''' oo loo soo gaabiyo DDS waa maamulka iyo dowlada deegaada Soomaali Galbeed ee maanta ka tirsan dowlada [[Itoobiya]].Dawladda Deegaanka Soomaalidu wuxuu ka mid yahay [[Dowlad Deegaanada Itoobiya|sagaalka dawlad deegaan]] ee Jamhuuriyadda Dimuqraadiga Federaalka Itoobiya Wuxuu ku fadhiyaa dhulka bariga iyo bari-koonfureed ee dalka Itoobiya. Baaxadda dhulka waxa lagu qiyaasaa 350,000 km2.Deegaanku wuxuu ku dhacayaa inta u dhaxaysa loolka  40-110 Waqooyi iyo Dhigta 40 -48 0E Bari.
 
 Deegaanku wuxuu xad la leeyahay, dhinaca konfureed waxa ka xiga [[Kenya]], dhinaca bari iyo koonfur bari waxa ka xiga [[Soomaaliya]], dhinaca galbeed iyo koonfur waxa ka xiga deegaanka [[Oromiya]], dhinaca galbeed iyo waqooyi galbeedna waxa ka xiga deegaanka [[canfar|canfarta]].Deegaanku inta uu ka sarreeyo badda waxa lagu qiyaasaa inta u dhaxaysa 500-1600 meters. Cimilada deegaanka soomaalida waxa lagu qiyaasaa dhul daaqsin isugu jira oomane, dhul kooban oo hela roob ku filan iyo dhul ay maraan wabiyo kala duwan. Heer-kulka deegaanku wuxuu u dhaxeyaa 20-45°C Celceliska roobka degaanku helaa wuxuu u dhaxeeyaa 300-500 mm.
 
-Tirada dadka ku nool deegaanka waxa lagu qiyaasaa 18.4 million (Tiro-koobkii la sameeyey 2007 - CSA census), 86% shacabka deegaanka waxay ku nool yihiin dhulka miyiga ah badankooduna waa xoolo-dhaqato
-
-Maamul ahaan degaanku wuxuu ka kooban yaha 11 maamul-gobaleed,6 maamul magaalo iyo 93 degm 
+Tirada dadka ku nool deegaanka waxa lagu qiyaasaa 8.4 million (Tiro-koobkii la sameeyey 2007 - CSA census), 86% shacabka deegaanka waxay ku nool yihiin dhulka miyiga ah badankooduna waa xoolo-dhaqatoMaamul ahaan degaanku wuxuu ka kooban yahay 11 Gobol,6 maamul magaalo iyo 93 degmo.
 
 ==Hordhac==
 Somali Galbeed waxee leedahay taariikh aad u dheer. gumeestihii ingriiska ayaa soo gumeestay dhamaadkii 1890ki, waxaana la dhihi jiray ingriiska somaliland, waxoona ku daray dalka itoobiya 1897. ingriiska markale ayoo isku dayay in oo ka soo saaro ogadenia dalka itoobiya,waa markii oo ingiriiska iyo talyaaniga ee wada shaqeen ee sameeyeen, sida ee gobolada soomaalida u miday lahaayeen. [[Dagaalkii Labaad ee Aduunka]] itoobiya waxee isku dayday in ee qaadato, dhulka [[Eratareya]] iyo ogadenia. ingriiska dhul yar ayoo ka qaatay ogadenia oo ka bilaawdo, magaalada [[haud]] ilaa fransiiska somaliland oo hatta la dhoho [[Jabuuti]]. ingriiska dhulkaas ma ku darin itoobiya ilaa sanadka marka oo ahaa 1954tii. 1977 ayaa waxaa dhacday, dagaalkii xoreenta Soomaali galbeed, waa markii ee itoobiya dhibaateysay shacabka ogadenia, waagaas itoobiya waxee iskugu wici jirtay libaaxyada afrika, laakiin madaxweynihii soomaaliya [[Maxamed Siyaad Barre]] oo dhalasho ahaan ka soo jeedo dhulka soomaali galbeed ayaa aad uuga xumaaday, dhibaatada ee itoobiyaanka ku haayeen dhulkaas, waa markii oo duulaan ku qaaday itoobiya.ciidamada Soomaaliya iyo somaligalbeed, ayaa isku dayay, in ee itoobiya ka bixiyaan dhulka ogadenia. ciidmada soomaaliya waxee markaas gacanta ku haayeen dhulka ogadenia oo dhan.
