--- a/Soomaali_Galbeed.mw
+++ b/Soomaali_Galbeed.mw
@@ -1,6 +1,6 @@
 {{Infobox settlement
 <!-- See Template:Infobox settlement for additional fields and descriptions -->| name                            = Somali  Region
-| official_name                   = 
+| official_name                   =Dawlad Deegaanka Soomaalida. 
 | native_name                     = (Gobolka Ogaden)
  <br>{{small|የሶማሌ ክልል}}
 | native_name_lang                = Somali
@@ -44,10 +44,10 @@
 | p1                              = 
 | government_footnotes            = 
 | leader_party                    = 
-| leader_title                    = [[Madaxweynayaasha ku meel gaarka ah ee soomaali galbeed, Itoobiya|ku meel gaarka ah]]
-| leader_name                     = [[Cabdi Maxamuud Cumar]]
+| leader_title                    = [[Madaxweynaha Imminka]]
+| leader_name                     = [[Mustafe Muxumed Cumar]]
 | leader_title1                   = Madaxweyne ku xigeenka kumeelgaarka ah
-| leader_name1                    = Cabdi Maxamuud Cumar
+| leader_name1                    = Ibraahim Cusmaan
 | unit_pref                       = Metric<!-- or US or UK -->
 | area_footnotes                  = 
 | area_rank                       = 2aad
