*Empty MediaWiki Message*

--- a/Soomaali_Galbeed.mw
+++ b/Soomaali_Galbeed.mw
@@ -91,7 +91,7 @@ Tirada dadka ku nool deegaanka waxa lagu qiyaasaa 8.4 million (Tiro-koobkii la s
 Somali Galbeed waxee leedahay taariikh aad u dheer. gumeestihii ingriiska ayaa soo gumeestay dhamaadkii 1890ki, waxaana la dhihi jiray ingriiska somaliland, waxoona ku daray dalka itoobiya 1897. ingriiska markale ayoo isku dayay in oo ka soo saaro ogadenia dalka itoobiya,waa markii oo ingiriiska iyo talyaaniga ee wada shaqeen ee sameeyeen, sida ee gobolada soomaalida u miday lahaayeen. [[Dagaalkii Labaad ee Aduunka]] itoobiya waxee isku dayday in ee qaadato, dhulka [[Eratareya]] iyo ogadenia. ingriiska dhul yar ayoo ka qaatay ogadenia oo ka bilaawdo, magaalada [[haud]] ilaa fransiiska somaliland oo hatta la dhoho [[Jabuuti]]. ingriiska dhulkaas ma ku darin itoobiya ilaa sanadka marka oo ahaa 1954tii. 1977 ayaa waxaa dhacday, dagaalkii xoreenta Soomaali galbeed, waa markii ee itoobiya dhibaateysay shacabka ogadenia, waagaas itoobiya waxee iskugu wici jirtay libaaxyada afrika, laakiin madaxweynihii soomaaliya [[Maxamed Siyaad Barre]] oo dhalasho ahaan ka soo jeedo dhulka soomaali galbeed ayaa aad uuga xumaaday, dhibaatada ee itoobiyaanka ku haayeen dhulkaas, waa markii oo duulaan ku qaaday itoobiya.ciidamada Soomaaliya iyo somaligalbeed, ayaa isku dayay, in ee itoobiya ka bixiyaan dhulka ogadenia. ciidmada soomaaliya waxee markaas gacanta ku haayeen dhulka ogadenia oo dhan.
 
 ==Luqada==
-98.82% waxaa looga hadlaa Af soomaali. luqadaha yar oo looga hadlo waxaa ka mid ah Af Amxaari  (0.67%), iyo Af Oromo (0.51%).
+98.82% waxaa looga hadlaa [[Af Soomaali|Af soomaali]]. luqadaha yar-yar oo looga hadlo waxaa ka mid ah Af Amxaari  (0.67%), iyo Af Oromo (0.51%).
 
 ==Diinta==
 99.4% shacabka deegaanka waxee qaateen diinta [[Muslimiinta Itoobiya|Islaamka]] , 0.50% [[Masiixiga Orthodoks ee itoobiya|Karishtaanka Orthodoks]], iyo 0.10% oo ah kuwo raaco diimo kale.<ref>[http://www.csa.gov.et/index.php?option=com_rubberdoc&view=doc&id=274&format=raw&Itemid=521 " Census 2007 Tables: Somali Region"], Tables 2.1, 2.5, 3.1, 3.2, 3.4</ref>
